
= Spring Plugin

== 1.12.0

* Improved the constraints `spring-component:ControllerMustOnlyDependOnServicesRepositories`, `spring-component:ServiceMustOnlyDependOnServicesRepositories` and `spring-component:RepositoryMustOnlyDependOnRepositories` to report one row per invalid dependency (https://github.com/jQAssistant/jqa-spring-plugin/issues/42[issue])
* Fixed false positives for constraint `spring-injection:InjectablesMustOnlyBeHeldInInjectables` for inner classes (https://github.com/jQAssistant/jqa-spring-plugin/issues/41[issue])
* Improved constraint `spring-injection:InjectablesShouldBeHeldInFinalFields` to return the `Type` declaring the `Field` and `InjectedType` as the injected field type.

== 1.10.0

* Added constraint `spring-injection:BeanProducerMustNotBeInvokedDirectly`
* Allow dependencies from any Spring component to `@Component` annotated beans
* Defined primary columns for constraint results for better matching in SonarQube
* Excluded generated Java types from Spring constraints, therefore the projects needs to extend the concept `java:GeneratedType`
* Excluded classes in test artifacts from constraint `spring-injection:InjectablesMustOnlyBeHeldInInjectables`

== 1.9.0

* fixed false-positive constraint violations for constraint `InjectablesMustNotBeInstantiated` for constructors invoking constructors from their super class
* the constraint `spring-injection:FieldsOfInjectablesMustNotBeManipulated` now allows manipulating fields from lifecycle callbacks (`@PostConstruct` and `@PreDestroy`)

== 1.8.0

* Added meta-annotated Spring annotations to concepts, e.g. `@SpringBootApplication` will be also labeled with `Configuration
* Relaxed the constraint `spring-injection:InjectablesMustNotBeInstantiated` such that instantiation is allowed from either bean producer methods declared by injectables or non-injectables (https://github.com/jQAssistant/jqa-spring-plugin/issues/25[issue])