@@ -1,0 +1,5 @@
+package com.buschmais.jqassistant.plugin.spring.test.set.components;
+
+@org.springframework.web.bind.annotation.RestControllerAdvice
+public class RestControllerAdvice {
+}
